cmake_minimum_required(VERSION 3.20)
project(IsFragileMarker)
cmake_policy(SET CMP0057 NEW)
set(CMAKE_CXX_STANDARD 17)
find_package(LLVM REQUIRED CONFIG)
include(AddLLVM)
include_directories(${LLVM_INCLUDE_DIRS})
add_definitions(${LLVM_DEFINITIONS})
add_llvm_library(FragileMarkPass MODULE fragile_marker_pass.cpp PLUGIN_TOOL clang)